syntax = "proto3";

package auth;

option go_package = "./auth;auth_v1";

service AuthService {
    rpc SignIn (SignInParams) returns (AuthJWT);
}

// entities


message AuthJWT {
    string accessToken = 1;
    string refreshToken = 2;
}

// requests

message SignInParams {
    string email = 1;
    string password = 2;
}
